Adding documentation for new routes and check of signup inputs
