# local_eat/api/models/models.go
@@ -1,4 +1,4 @@
-package model
+package models
 
 import (
 	"time"
@@ -6,14 +6,14 @@ import (
 
 type Users struct {
 	Username         *string   `json:"username,omitempty" example:"john_vleminckx" gorm:"primaryKey; varchar(20); unique"`
-	Producer         *Producer `gorm:"foreignKey:Username; references:Username; constraint:OnDelete:CASCADE;"`
+	Producer         *Producers `gorm:"foreignKey:Username; references:Username; constraint:OnDelete:CASCADE;"`
 	Password         string    `json:"password" example:"ba7816bf8f01cfea414140de5dae2223b00361a396177a9cb410ff61f20015ad"`
 	Email            *string   `json:"email,omitempty" example:"mateo@example.com" gorm:"type:varchar(50)"`
-	CreatedAt        time.Time `json:"created" example:"Mon Jan 2 15:04:05 MST 2006"`
+	CreatedAt        time.Time `json:"createdAt" example:"Mon Jan 2 15:04:05 MST 2006"`
 	ProfilePictureId *string   `json:"profile_picture_id,omitempty" example:"1524689"`
 }
 
-type Producer struct {
+type Producers struct {
 	ID        int    `json:"id" example:"1" gorm:"primaryKey; autoIncrement; type:int; not null"`
 	Username  string `json:"username" example:"john_vleminckx" gorm:"not null; index"`
 	Firstname string `json:"firstname" example:"John" gorm:"type:char(20); not null"`
